# cosmo_lander

./: CMakeLists.txt  README.md  data.json  getPOI.py  getROI.py  package.xml
lander/: lander_server.py  lander_services.py  poi.json  publisher.py  roi.json
msg/: Coordinate.msg  PointOfInterest.msg  RegionOfInterest.msg
srv/: GetPOI.srv  GetROI.srv  SetPOI.srv
